hphp/hack/test/typecheck/lambda/lambda_contextual/lambda_bad_as_vec_argument.php.like_types.exp
File "lambda_bad_as_vec_argument.php", line 25, characters 10-11:
Invalid return type (Typing[4110])
File "lambda_bad_as_vec_argument.php", line 23, characters 4-27:
Expected MyClosureRunner<~MyClass>
File "lambda_bad_as_vec_argument.php", line 22, characters 7-30:
But got dynamic because it is an unenforceable type
File "lambda_bad_as_vec_argument.php", line 32, characters 17-30:
No method 'missing_method' in MyClass (did you mean 'hello'?) (Typing[4053])
File "lambda_bad_as_vec_argument.php", line 22, characters 23-29:
This is why I think it is an object of type MyClass
File "lambda_bad_as_vec_argument.php", line 4, characters 7-13:
Declaration of MyClass is here
